# melange-radix-icons

./: .gitignore  CHANGES.md  LICENSE  README.md  dune-project  index.html  melange-radix-icons.opam  package-lock.json  package.json
melange-radix-icons/: index.html
melange-radix-icons/RadixIcons/: index.html
melange-radix-icons/RadixIcons/Accessibility/: index.html
melange-radix-icons/RadixIcons/ActivityLog/: index.html
melange-radix-icons/RadixIcons/AlignBaseline/: index.html
melange-radix-icons/RadixIcons/AlignBottom/: index.html
melange-radix-icons/RadixIcons/AlignCenterHorizontally/: index.html
melange-radix-icons/RadixIcons/AlignCenterVertically/: index.html
melange-radix-icons/RadixIcons/AlignLeft/: index.html
melange-radix-icons/RadixIcons/AlignRight/: index.html
melange-radix-icons/RadixIcons/AlignTop/: index.html
melange-radix-icons/RadixIcons/AllSides/: index.html
melange-radix-icons/RadixIcons/Angle/: index.html
melange-radix-icons/RadixIcons/Archive/: index.html
melange-radix-icons/RadixIcons/ArrowBottomLeft/: index.html
melange-radix-icons/RadixIcons/ArrowBottomRight/: index.html
melange-radix-icons/RadixIcons/ArrowDown/: index.html
melange-radix-icons/RadixIcons/ArrowLeft/: index.html
melange-radix-icons/RadixIcons/ArrowRight/: index.html
melange-radix-icons/RadixIcons/ArrowTopLeft/: index.html
melange-radix-icons/RadixIcons/ArrowTopRight/: index.html
melange-radix-icons/RadixIcons/ArrowUp/: index.html
melange-radix-icons/RadixIcons/AspectRatio/: index.html
src/: RadixIcon.re  RadixIcons.re  dune
(+613 files in other folders)
